# aws-data-platform-and-extraction

./: .gitignore  MANUAL_SETUP_GUIDE.md  README.md  requirements-dev.txt
.github/scripts/: deploy_stacks.py  render_matrix.py
.github/workflows/: build-containers.yml  deploy-infrastructure.yml  deploy-triplewhale.yml  lint-test.yml
ci/: ingestion_jobs.json
ci/environments/: README.md
data-ingestion/shopify/: SHOPIFY_INGESTION_BACKLOG.md  SHOPIFY_INGESTION_BEST_PRACTICES_GUIDE.md
data-ingestion/triplewhale/: README.md  pyproject.toml
data-ingestion/triplewhale/src/triplewhale_ingestion/: __init__.py  aggregator.py  cli.py  config.py  models.py  sql_loader.py  timezones.py  triple_whale_client.py
docs/: shopify-backfill.md
docs/triplewhale/: README.md  kpis.md  metrics.md
glue-scripts/: orders_enriched_job.py
glue-scripts/triplewhale/: README.md
infrastructure/: data-lake.yaml  data-quality.yaml  dynamodb-tables.yaml  eventbridge-rules.yaml  glue-catalog.yaml  glue-jobs.yaml  monitoring.yaml  recharge-webhook.yaml  shopify-bulk-workflow.yaml
infrastructure/data-quality/: README.md
infrastructure/monitoring/: README.md
infrastructure/recharge/: README.md  recharge-webhook.yaml
infrastructure/shared/: README.md  s3-lifecycle-policy.json  secrets-manager.yaml
infrastructure/shopify/: README.md
infrastructure/triplewhale/: README.md  triplewhale.yaml
lambdas/data-quality-checker/: index.py
lambdas/recharge-event-processor/: index.py
scripts/: build_push_lambdas.sh  run_backfill.py
tests/: test_ingestion.py
(+29 files in other folders)
